Bug 417922 - recentlyused:// ioslave has "unknown" icon
Summary: recentlyused:// ioslave has "unknown" icon
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: Recently Used (other bugs)
Version First Reported In: 20.03.70
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-20 11:37 UTC by Patrick Silva
Modified: 2020-02-22 11:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.68
Sentry Crash Report:


Attachments
screenshot (17.10 KB, image/png)
2020-02-20 11:37 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-02-20 11:37:51 UTC
Created attachment 126197 [details]
screenshot

STEPS TO REPRODUCE
1. open Dolphin
2. press ctrl+t to open another tab 
3. click on "Recent files" or "Recent locations" entries under "Recent" section of places panel

OBSERVED RESULT
Tab showing recent files/locations has "unknown" icon.
See the attached screenshot please.

EXPECTED RESULT
tab showing recent files/locations should have a suitable icon

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.1
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION
related to bug 417921 and bug 417069
Comment 1 Méven Car 2020-02-21 10:16:13 UTC
Patch proposal: https://phabricator.kde.org/D27539
Comment 2 Méven Car 2020-02-22 11:35:53 UTC
Git commit eb20176d1a42eebd4c6c3cbdb5dca6a854760736 by Méven Car.
Committed on 22/02/2020 at 11:35.
Pushed by meven into branch 'master'.

KIO::iconNameForUrl: fix searching for kde protocol icons

Summary:
iconName was set to mt.iconName() at the beginning, but this returns always "application-octet-stream" making all subsequent iconName.isEmpty() check not work as expected.
This patch sets iconName to mt.iconName() only when needed.
Related: bug 417921, bug 417069
FIXED-IN: 5.68

Test Plan:
In dolphin:
 - open "Recent Files"
 - Ctrl+T

 - open any folder
 - Ctrl+T
 - Ctrl+F (Search
 - Search for anything, type something then return

Same for smb:/ location

In all cases the protocol icon is now visible.

Reviewers: ngraham, #frameworks, dfaure, broulik, sitter

Reviewed By: ngraham, dfaure, sitter

Subscribers: sitter, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D27539

M  +13   -1    autotests/kfileitemtest.cpp
M  +14   -18   src/core/global.cpp

https://commits.kde.org/kio/eb20176d1a42eebd4c6c3cbdb5dca6a854760736